Ajout d'un champ Category dans les fichiers description
git-svn-id: svn://scm.gforge.inria.fr/svnroot/coq-contribs/trunk@776 0cf17b13-060f-0410-b1b1-c666bec9822a

--- a/description
+++ b/description
@@ -5,3 +5,4 @@ Institution: INRIA Sophia-Antipolis
 Date: Mars 2002
 Description: Strings as list of characters.
 Keywords: string, ascii character
+Category: Miscellaneous/Coq Extensions
