--- a/description
+++ b/description
@@ -2,7 +2,7 @@ Name: String
 Title: Definition of strings in Coq
 Author: Laurent Théry
 Institution: INRIA Sophia-Antipolis
-Date: Mars 2002
+Date: 2002-03
 Description: Strings as list of characters.
 Keywords: string, ascii character
 Category: Miscellaneous/Coq Extensions
